[package]
name = "FGGB"
version = "0.3.0"
edition = "2021"
authors = ["XEKEX <amin.chiha@gmail.com>"]
repository = "https://github.com/chihaamin/FGGB"
description = "Frida bridge that injects a `frida` global into GameGuardian's Lua"

[[bin]]
name = "FGGB"
path = "src/main.rs"

[dependencies]
frida = { version = "0.17", features = ["auto-download"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
self_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# frida 0.17.2 (crates.io) has a use-after-free in its script "message" callback that
# fires on any console.log / uncaught JS error / plain send() from an injected script.
# Upstream main fixes both the UB and RPC routing. The pinned commit is still crate
# version 0.17.2, so this patch satisfies the `version = "0.17"` requirement above.
[patch.crates-io]
frida = { git = "https://github.com/frida/frida-rust", rev = "415db91bd38fdbe07c3f49f7d60501307b4addb9" }
